--- a/src/components/multistepform.css
+++ b/src/components/multistepform.css
@@ -141,6 +141,12 @@ select:focus {
   max-width: 400px;
   width: 90%;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
+  cursor: auto;
+}
+.modal-close-button{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
 }
 
 .fade-in {
